Adjust the layout to ensure that image is aligned with the text

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -177,8 +177,8 @@ footer {
     width: 100%;
     margin-bottom: 20px;
     /* Adds space below the table */
-    margin-top:50px;
-    /* Adds space above the table */
+    margin-top: 50px;
+    z-index: 0;
 }
 
 #course-breakdown th,
@@ -219,12 +219,13 @@ footer {
 .img-container {
     overflow: visible;
     /* Ensures the original image bounds are set */
-    border: 1px solid #ccc;
-    /* Optional: adds a border around the image container */
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 0;
+    z-index: 1;
+    align-items:first baseline;
 }
 
 /* Image styles */
@@ -235,15 +236,30 @@ img.pop-out-image {
     height: auto;
     border-radius: 10px;
     /* Optional: adds rounded corners to the image */
+    will-change: transform;
+    transform-origin: center center;
+        /* Promotes the image to its own layer */
 }
 
 /* Pop out effect on hover */
 .img-container:hover img.pop-out-image {
-    transform: scale(1.75);
+    transform: scale(1.5);
     /* Scales the image */
     position: absolute;
     z-index: 10;
     /* Ensure it pops out over other content */
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     /* Optional: adds shadow for more depth */
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* Splits the container into two columns */
+    gap: 10px;
+    /* Optional: adds space between columns */
+}
+
+.grid-item {
+    padding: 20px;
 }
